and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

December 12th, 2014 G.Cosmo               - geomvol-V10-00-09
- Use canonical form for copy-ctor and operator=() in G4GRSSolid, G4GRSVolume,
  G4LogicalBorderSurface and G4LogicalSkinSurface.

December 11th, 2014 G.Cosmo
- Avoid post-increment in G4NavigationLevelRep::AddAReference().

December 5th, 2014 M.Asai
- G4NavigationHistoryPool - Move printout from the destructor to the
  dedicated Print() method.

November 13th, 2014 G.Cosmo               - geomvol-V10-00-08
- Restored constructors/destructor for G4TouchableHistory - derived class
  to be not inline.
- Restored also non-inline constructors/destructors for G4NavigationHistory
  and G4NavigationLevel (the last apparently responsible for crashes on SLC5
  in the allocation).

November 3rd, 2014 G.Cosmo                - geomvol-V10-00-07
- Moved constructors, destructors and assignment operators for
  G4NavigationHistory, G4NavigationLevel, G4NavigationLevelRep and
  G4TouchableHistory to be inline, for CPU optimisation
  (courtesy of S.Wenzel).

October 18th, 2014 A.Dotti                - geomvol-V10-00-06
- Corrected possible data race (reported by DRD) in 
  G4PVReplica::InitialiseWorker().

June 11th, 2014 G.Cosmo                   - geomvol-V10-00-05
- Corrected implementation of copy-constructor and assignment-operator
  for G4NavigationHistory, to provide exact copy for size of the
  histories-level vector.

June 10th, 2014 G.Cosmo                   - geomvol-V10-00-04
- Avoid un-necessary clearing of navigation history levels in
  G4NavigationHistory destructor.

May 14th, 2014 G.Cosmo                    - geomvol-V10-00-03