@@ -71,7 +71,7 @@ G4bool testG4BlockingList()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+  G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4BlockingList());
     return 0;
