@@ -123,7 +123,7 @@ G4bool testG4NavigationHistory()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+    G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4NavigationHistory());
     return 0;
