@@ -355,7 +355,7 @@ G4bool testG4ReplicaNavigation()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+    G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4ReplicaNavigation());
     return 0;
