@@ -93,7 +93,7 @@ G4bool testG4SmartVoxelHeaderProxy()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+    G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4SmartVoxelNodeProxy());
     assert(testG4SmartVoxelHeaderProxy());
