@@ -201,7 +201,7 @@ G4bool testG4ReplicaVoxels()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+    G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4SmartVoxelNodes());
     assert(testG4SmartVoxels());
