@@ -114,7 +114,7 @@ G4bool testG4VoxelLimits()
 int main()
 {
 #ifdef NDEBUG
-    G4Exception("FAIL: *** Assertions must be compiled in! ***");
+    G4Exception("main","000",FatalException,"FAIL: *** Assertions must be compiled in! ***");
 #endif
     assert(testG4VoxelLimits());
     return 0;
